missing last page

--- a/specs.html
+++ b/specs.html
@@ -2,23 +2,74 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Volkswagen group</title>
+    <title>Specs</title>
     <link id="theme" rel="stylesheet" type="text/css" href="csl.css" />
   </head>
   <body>
-    <h1> What is the Volkswagen Group? </h1>
+    <h1> All about specifications </h1>
     <ul>
 	<li><a href="main.html">What is Volkswagen?</a></li>
   	<li><a href="brands.html">Subsidiaries</a></li>
   	<li><a href="specs.html">All about specs</a></li>
     </ul> 
     <hr>
-    <img src="vw.png" alt="vw logo displayed here">
+    <img src="spcs.jpeg" alt="golf gti interior displayed here">
     <hr>
         <i> <b>Overview</b> </i>
-	<p> The Volkswagen group is a German Multinational automotive manufacturing corporation headquarted in Germany. </p>
+	<p> Lets dive into the specs. What do they mean? </p>
+	
+<ul>
+	<li><a href="#hp">Horser Power? Torque?</a></li>
+	<li><a href="#engines">Engines / Drivetrains</a></li>
+	<li><a href="#body">Body types</a></li>
+	
+</ul>
+	<hr>	
 
-	<i> <b>What does it mean to me?</b> </i>
-	<p> Looking to buy a car is a fun, but overwhelming experience. The amount of choices that is offered is insane and it is hard to know what the best choice is. All Wheel Drive? Four Wheel Drive? Coup? Hatchback? The questions one encounters and has to rationalize is insane. Even with my limited budget, the choices seemed limitless and I quickly got overwhelmed. I even reached a point where I almost gave up and bought the first car that appeared on Craigslist! Hopefully this website can help you navigate a small portion of the automotive industry and allow you to make a well educated choice. </p> 
+	<a name="hp">
+  		<div id="hp">
+ 		 <i> <b>Horsepower versus Torque</b> </i>
+		<p>
+		Horspower and torue are commonly used metrics when it comes to describing a car. I know when I first started looking into cars, I was very confused as to what the difference actually meant. <br> <br> Horsepower is the unit of measurement that describes the rate at which work is done. Torque on the other hand is rotational force, or rather a twisting force. To put these two terms together, the torque is doing the work of moving the car while horsepower is how fast that work is being done! As my old mechanical engineering teacher used to say, torque is what gets you going and horsepower is how fast you can go!
+		</p>
+		</div>
+	</a>
+
+	<hr>
+	
+	<a name="engines">
+  		<div id="engines">
+ 		 <i> <b>All about engines </b> </i>
+		<p>
+		  Almost all modern compustion cars use a cylinder based combustion engine. Most of the time there are two numbers associated with engines. The first number being the number of cylinders and the second being the displacement of the cylinder. The displacement of the cylinder is simply how big the cylinder is. For example, the 2.0 TSI commonly found in Volkswagens is a four cylinder engine with a displacement of 2.0 Liters! 
+
+	<br><br> Most modern sports cars also used what is called forced induction. This is where the terms "turbo-charger" and "super-charger" come into play. Both turbo-chargers and super-chargers are mechanisms designed to push more air into the engine. More air into the engine means more power! 
+		</p>
+	<br>
+	<i><b> Drive Trains </b></i>
+	<p> Now that we have the engine making power we need to get this power to the wheels. This is where the drivetrain comes into play. There are mainly three different ways to drive the wheels. FWD (Front wheel drive) means that only the front two wheels of the car is getting power. RWD (Rear wheel drive) means that only the rear wheels of the car are receiving power. Finally AWD (All wheel drive) means that all four wheels are getting power from the engine. FWD is more practical and common whereas RWD is typically reserved for sports cars. Finally AWD is good all around and does well in harsher weather / terrain but increases the cost and weight of the car. </p>
+	
+		</div>
+	</a>
+	
+<hr>
+	<a name="body">
+		<div id="body">
+		<i> <b> Body Types? </b> </i>
+		<img src="body.jpg" alt="bodytype diplayed here">
+		
+		<p> 
+		This is where things start to get a little more compicated. Hopefully the image above is able to clear it up a little bit. <br><br>
+		Sedan: Your typically four door seen driving around <br>
+		SUV: Sport utility vehicle <br>
+		Coupe: Sedan but with two doors instead <br>
+		Hatchback: Rear swinging upward door with cargo area <br>
+		Wagon: Longer hatchback where cargo area extends past rear wheels <br>
+		</p>
+		</div>
+
+	</a>
+	
+	
   </body>
 </html>
