last page template added

--- a/brands.html
+++ b/brands.html
@@ -11,6 +11,7 @@
 	<li><a href="main.html">What is Volkswagen?</a></li>
   	<li><a href="brands.html">Subsidiaries</a></li>
   	<li><a href="specs.html">All about specs</a></li>
+	<li><a href="carsearch.html">Car finder</a></li>
     </ul> 
     <hr>
     <h3>Subsidiaries</h3>
@@ -67,7 +68,7 @@
 	<hr>
 	
 	<i> <b>Difference between Audi and Volkwagen?</b> </i>
-	<p> This is an incredibly common question and what that I struggled with. One might ask, whats the difference between a VW with all features versus a mid-range Audi? Isn't the price the same? </p>
+	<p> This is an incredibly common question and what I struggled with. One might ask, whats the difference between a VW with all features versus a mid-range Audi? Isn't the price the same? </p>
 
 	<br>
 	
