--- a/specs.html
+++ b/specs.html
@@ -11,6 +11,7 @@
 	<li><a href="main.html">What is Volkswagen?</a></li>
   	<li><a href="brands.html">Subsidiaries</a></li>
   	<li><a href="specs.html">All about specs</a></li>
+	<li><a href="carsearch.html">Car finder</a></li>
     </ul> 
     <hr>
     <img src="spcs.jpeg" alt="golf gti interior displayed here">
