--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
   	<li><a href="brands.html">Subsidiaries</a></li>
   	<li><a href="specs.html">All about specs</a></li>
 	<li><a href="carsearch.html">Car finder</a></li>
-    </ul>
+    </ul> 
     <hr>
     <img src="vw.png" alt="vw logo displayed here">
     <hr>
@@ -20,6 +20,7 @@
 	<p> The Volkswagen group is a German Multinational automotive manufacturing corporation headquarted in Germany. </p>
 
 	<i> <b>What does it mean to me?</b> </i>
-	<p> Looking to buy a car is a fun, but overwhelming experience. The amount of choices that is offered is insane and it is hard to know what the best choice is. All Wheel Drive? Four Wheel Drive? Coupe? Hatchback? The questions one encounters and has to rationalize is insane. Even with my limited budget, the choices seemed limitless and I quickly got overwhelmed. I even reached a point where I almost gave up and bought the first car that appeared on Craigslist! Hopefully this website can help you navigate a small portion of the automotive industry the volkswagen group and allow you to make a well educated choice while increasing your knowledge about cars! </p>
+	<p> Looking to buy a car is a fun, but overwhelming experience. The amount of choices that is offered is insane and it is hard to know what the best choice is. All Wheel Drive? Four Wheel Drive? Coup? Hatchback? The questions one encounters and has to rationalize is insane. Even with my limited budget, the choices seemed limitless and I quickly got overwhelmed. I even reached a point where I almost gave up and bought the first car that appeared on Craigslist! Hopefully this website can help you navigate a small portion of the automotive industry the volkswagen group and allow you to make a well educated choice while increasing your knowledge about cars! </p> 
   </body>
 </html>
+
