--- a/specs.html
+++ b/specs.html
@@ -31,7 +31,7 @@
   		<div id="hp">
  		 <i> <b>Horsepower versus Torque</b> </i>
 		<p>
-		Horspower and torue are commonly used metrics when it comes to describing a car. I know when I first started looking into cars, I was very confused as to what the difference actually meant. <br> <br> Horsepower is the unit of measurement that describes the rate at which work is done. Torque on the other hand is rotational force, or rather a twisting force. To put these two terms together, the torque is doing the work of moving the car while horsepower is how fast that work is being done! As my old mechanical engineering teacher used to say, torque is what gets you going and horsepower is how fast you can go!
+		Horspower and torque are commonly used metrics when it comes to describing a car. I know when I first started looking into cars, I was very confused as to what the difference actually meant. <br> <br> Horsepower is the unit of measurement that describes the rate at which work is done. Torque on the other hand is rotational force, or rather a twisting force. To put these two terms together, the torque is doing the work of moving the car while horsepower is how fast that work is being done! As my old mechanical engineering teacher used to say, torque is what gets you going and horsepower is how fast you can go!
 		</p>
 		</div>
 	</a>
@@ -42,7 +42,7 @@
   		<div id="engines">
  		 <i> <b>All about engines </b> </i>
 		<p>
-		  Almost all modern compustion cars use a cylinder based combustion engine. Most of the time there are two numbers associated with engines. The first number being the number of cylinders and the second being the displacement of the cylinder. The displacement of the cylinder is simply how big the cylinder is. For example, the 2.0 TSI commonly found in Volkswagens is a four cylinder engine with a displacement of 2.0 Liters! 
+		  Almost all modern combustion cars use a cylinder based engine. Most of the time there are two numbers associated with engines. The first number being the number of cylinders and the second being the displacement of the cylinder. The displacement of the cylinder is simply how big the cylinder is. For example, the 2.0 TSI commonly found in Volkswagens is a four cylinder engine with a displacement of 2.0 Liters! 
 
 	<br><br> Most modern sports cars also used what is called forced induction. This is where the terms "turbo-charger" and "super-charger" come into play. Both turbo-chargers and super-chargers are mechanisms designed to push more air into the engine. More air into the engine means more power! 
 		</p>
